Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1358

Fails to parse any struct/class with an __attribute__ attached to it

    XMLWordPrintable

Details

    • 25d7933d7a64a589c479da38df4bbe204bd9e53a

    Description

      NOTE: I reported this issue as QTCREATORBUG-994 before, and it was stated to be fixed in 2.0.0-beta. However, I tried the newly released 2.0.0-beta today and the issue is still there. Therefore I would like to reopen this bug report. Since I haven't found a button to reopen the existing QTCREATORBUG-994 entry, I had to clone it here. The text of the original entry follows.

      Here's an example struct declaration Qt Creator has problems with:

      struct MyStruct
      {
      char a;
      char b;
      } _attribute_((packed));

      Qt Creator fails to parse that struct. It won't autocomplete its fields, it won't go to its declaration, and so on. It just doesn't exist for it.

      The _attribute_ mechanism is a standard gcc feature which quite widely used. It's the only way to declare structure packing, for example. It would be nice if Qt Creator would parse such declarations correctly.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            erikv Erik Verbruggen
            dragonroot Konstantin Isakov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes