Fixed __attribute__ parsing after struct declarations.

Task-number: QTCREATORBUG-1358
Reviewed-by: Roberto Raggi